fixed spacing

--- a/stylesheets/blog-stylesheets.css
+++ b/stylesheets/blog-stylesheets.css
@@ -11,7 +11,7 @@ body {
 
 #yeysides {
 	background-color: black;
-	padding-left: 20px;
+	padding-left: 10px;
 	padding-right: 10px;
 }
 
